--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ dbt-extractor==0.4.1
 dbt-snowflake==1.4.1
 filelock==3.9.0
 future==0.18.3
+greenlet==2.0.2
 grpclib==0.4.3
 h2==4.1.0
 hologram==0.0.15
@@ -35,10 +36,13 @@ more-itertools==9.0.0
 msgpack==1.0.4
 multidict==6.0.4
 networkx==2.8.8
+numpy==1.24.2
 oscrypto==1.3.0
 packaging==21.3
+pandas==1.5.3
 parsedatetime==2.4
 pathspec==0.10.3
+pyarrow==8.0.0
 pycparser==2.21
 pycryptodomex==3.17
 PyJWT==2.6.0
@@ -53,6 +57,8 @@ PyYAML==6.0
 requests==2.28.2
 six==1.16.0
 snowflake-connector-python==2.8.1
+snowflake-sqlalchemy==1.4.6
+SQLAlchemy==1.4.46
 sqlparse==0.4.3
 stringcase==1.2.0
 text-unidecode==1.3
